# analysis-primate-population-data

./: .gitignore  macaco.py  macaco.txt  main.py  pyproject.toml  readme.md  run.sh
images/: .gitignore
models/: .gitignore  Primate.py  PrimateDAO.py
models/factories/: PrimateFactory.py
reports/: .gitignore  report.docx  report.md
scripts/: BarGraph.py  DataConsistencyValidator.py  Outliers.py
scripts/components/: Graph.py
storage/data/processed/: .gitignore  primates_dataset_filled.csv
utils/: DAO.py  Log.py  Query.py  Types.py
